Modificado diseño css pagina tecnologias

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/tecnologias.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/tecnologias.html
@@ -27,44 +27,43 @@
     <p>
         Python es un lenguaje de programación orientado a objetos de alto nivel utilizado a menudo para crear sitios web y software, automatizar tareas y realizar análisis de datos.
         <br />
-        <a style="margin-top:20px" href="https://developer.oracle.com/es/learn/technical-articles/what-is-python" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
+        <a href="https://developer.oracle.com/es/learn/technical-articles/what-is-python" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
     </p>
     
     <div class="col-md-4">
-        <h2 style="font-family: 'Lobster'"><em>Aprendizaje</em></h2>
-        <p style="color:yellow">
+        <h2><em>Aprendizaje</em></h2>
+        <p>
             Puede aprender más sobre cómo utilizar el lenguaje de programación python.
             <br />
-            <a style="margin-top:20px" href="https://www.w3schools.com/python/default.asp" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
+            <a href="https://www.w3schools.com/python/default.asp" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
         </p>
     </div>
 </div>
 
 <!--DJANGO-->
 <div id="Django" style="display:none">
-    <h1 style="font-family: 'Lobster';"><em>DJANGO</em></h1>
-    <p style="color:yellow">
+    <h1><em>DJANGO</em></h1>
+    <p>
         Django es un marco web gratuito para crear excelentes sitios web y aplicaciones web utilizando HTML, CSS y JavaScript.
         <br />
-        <a style="margin-top:20px" href="https://www.djangoproject.com/" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
+        <a href="https://www.djangoproject.com/" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
     </p>
     <div class="row">
-
         <div class="col-md-4">
-            <h2 style="font-family: 'Lobster'"><em>Obtencion librerias</em></h2>
-            <p style="color:yellow">
+            <h2><em>Obtencion librerias</em></h2>
+            <p>
                 Python Package Index es un repositorio de software para el lenguaje de programación Python.
                 <br />
-                <a style="margin-top:20px" class="btn btn-primary btn-large" href="https://pypi.org/" target="_blank">Aprender más&raquo;</a>
+                <a class="btn btn-primary btn-large" href="https://pypi.org/" target="_blank">Aprender más&raquo;</a>
             </p>
         </div>
         
         <div class="col-md-4">
-            <h2 style="font-family: 'Lobster'"><em>Microsoft Azure</em></h2>
-            <p style="color:yellow">
+            <h2><em>Microsoft Azure</em></h2>
+            <p>
                 Puede publicar fácilmente en Microsoft Azure con Visual Studio. Descubra cómo puede alojar su aplicación con una prueba gratuita hoy.
                 <br />
-                <a style="margin-top:20px" class="btn btn-primary btn-large" href="http://azure.microsoft.com" target="_blank">Aprender más&raquo;</a>
+                <a class="btn btn-primary btn-large" href="http://azure.microsoft.com" target="_blank">Aprender más&raquo;</a>
             </p>  
         </div>
     </div>
@@ -73,29 +72,29 @@
 <!--HTML-->
 
 <div id="html" style="display:none">
-    <h1 style="font-family: 'Lobster';"><em>HTML</em></h1>
-    <p style="color:yellow">
+    <h1><em>HTML</em></h1>
+    <p>
         HTML es el lenguaje con el que se define el contenido de las páginas web.
         <br />
-        <a style="margin-top:20px" href="https://developer.mozilla.org/es/docs/Web/HTML" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
+        <a href="https://developer.mozilla.org/es/docs/Web/HTML" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
     </p>
     <div class="row">
         
         <div class="col-md-4">
-            <h2 style="font-family: 'Lobster'"><em>Aprendizaje</em></h2>
-            <p style="color:yellow">
+            <h2><em>Aprendizaje</em></h2>
+            <p>
                 Puede aprender de forma sencilla como diseñar páginas html. Descubra cómo diseñar sus propias páginas web usando html de forma gratuita.    
                 <br />
-                <a style="margin-top:20px" href="https://www.w3schools.com/html/" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
+                <a href="https://www.w3schools.com/html/" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
             </p>
         </div>
         
         <div class="col-md-4">
-            <h2 style="font-family: 'Lobster'"><em>PyScript</em></h2>
-            <p style="color:yellow">
+            <h2><em>PyScript</em></h2>
+            <p>
                 Pyscipt es un nuevo framework que permite crear aplicaciones para el navegador web usando Python, JavaScript, CSS y HTML. Descubra cómo emplear el lenguaje de programación Python en el navegador web.
                 <br />
-                <a style="margin-top:20px" class="btn btn-primary btn-large" href="https://platzi.com/blog/pyscript-la-forma-de-correr-python-en-el-navegador-news/" target="_blank">Aprender más&raquo;</a>
+                <a class="btn btn-primary btn-large" href="https://platzi.com/blog/pyscript-la-forma-de-correr-python-en-el-navegador-news/" target="_blank">Aprender más&raquo;</a>
             </p>  
         </div>
     </div>
@@ -104,18 +103,18 @@
 <!--JavaScript-->
 
 <div id="javascript" style="display:none">
-    <h1 style="font-family: 'Lobster';"><em>JAVASCRIPT</em></h1>
-    <p style="color:yellow">
+    <h1><em>JAVASCRIPT</em></h1>
+    <p>
         JavaScript es un lenguaje de programación que los desarrolladores utilizan para diseñar páginas web interactivas.
         <br />
-        <a style="margin-top:20px" href="https://developer.mozilla.org/es/docs/Learn/JavaScript/First_steps/What_is_JavaScript" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
+        <a href="https://developer.mozilla.org/es/docs/Learn/JavaScript/First_steps/What_is_JavaScript" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
     </p>
     <div>
-        <h2 style="font-family: 'Lobster'"><em>Aprendizaje</em></h2>
-            <p style="color:yellow">
+        <h2><em>Aprendizaje</em></h2>
+            <p>
                 Puede aprender de forma sencilla como implementar JavaScript en páginas web. Descubra cómo mejorar las funcionalidades de sus páginas web de forma gratuita.
                 <br />
-                <a style="margin-top:20px" href="https://www.w3schools.com/js/default.asp" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
+                <a href="https://www.w3schools.com/js/default.asp" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
             </p>
     </div>
 </div>
@@ -123,18 +122,18 @@
 <!--CSS-->
 
 <div id="css" style="display:none">
-    <h1 style="font-family: 'Lobster';"><em>CSS</em></h1>
-    <p style="color:yellow">
+    <h1><em>CSS</em></h1>
+    <p>
         CSS es un lenguaje de programación utilizado por los programadores para el diseño visual de páginas web.
         <br />
-        <a style="margin-top:20px" href="https://developer.mozilla.org/es/docs/Learn/CSS/First_steps/What_is_CSS" target="_blank" class="btn btn-primary btn-large">Aprender más&raquo;</a>
+        <a href="https://developer.mozilla.org/es/docs/Learn/CSS/First_steps/What_is_CSS" target="_blank" class="btn btn-primary btn-large">Aprender más&raquo;</a>
     </p>
     <div>
-        <h2 style="font-family: 'Lobster'"><em>Aprendizaje</em></h2>
-            <p style="color:yellow">
+        <h2><em>Aprendizaje</em></h2>
+            <p>
                 Puede aprender de forma sencilla como diseñar visualmente sus propias páginas web. Descubra cómo mejorar el diseño visual de sus páginas web de forma gratuita.
                 <br />
-                <a style="margin-top:20px" href="https://www.w3schools.com/css/default.asp" target="_blank" class="btn btn-primary btn-large">Aprender más&raquo;</a>
+                <a href="https://www.w3schools.com/css/default.asp" target="_blank" class="btn btn-primary btn-large">Aprender más&raquo;</a>
             </p>
     </div>
 </div>
@@ -142,18 +141,18 @@
 <!--BASH-->
 
 <div id="bash" style="display:none">
-    <h1 style="font-family: 'Lobster';"><em>BASH</em></h1>
-    <p style="color:yellow">
+    <h1><em>BASH</em></h1>
+    <p>
         Bash es un intérprete de comandos y lenguaje de programación integrado que corre bajo el macroprocesador Shell de Unix.
         <br />
-        <a style="margin-top:20px" href="https://es.ccm.net/ordenadores/linux/3810-que-es-un-shell-y-para-que-se-utiliza/" target="_blank" class="btn btn-primary btn-large">Aprender más&raquo;</a>
+        <a href="https://es.ccm.net/ordenadores/linux/3810-que-es-un-shell-y-para-que-se-utiliza/" target="_blank" class="btn btn-primary btn-large">Aprender más&raquo;</a>
     </p>
     <div>
-        <h2 style="font-family: 'Lobster'"><em>Bash con Python</em></h2>
-            <p style="color:yellow">
+        <h2><em>Bash con Python</em></h2>
+            <p>
                 Puede utilizar fácilmente Python en un script bash. Descubra cómo incrustar Python en Bash.
                 <br />
-                <a style="margin-top:20px" href="https://tecnobillo.com/sections/bonus/combinando-python-y-bash/combinando-python-y-bash.html" target="_blank" class="btn btn-primary btn-large">Aprender más&raquo;</a>
+                <a href="https://tecnobillo.com/sections/bonus/combinando-python-y-bash/combinando-python-y-bash.html" target="_blank" class="btn btn-primary btn-large">Aprender más&raquo;</a>
             </p>
                 
     </div>
