--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/plantillaBase.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/plantillaBase.html
@@ -54,6 +54,10 @@
         p {
             color: yellow;
         }
+
+        a {
+            margin-top: 20px;
+        }
         
     </style>
 </head>
