Modificado diseño css pagina Mineria de Datos

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
@@ -3,14 +3,12 @@
 <!--Add a filter menu-->
 {% block siderbar %}
     <div>
-        <button onclick="$('#descripcion').show(); $('#etapasMineriaDatos').hide(); $('#informacionInteres').hide(); $('#ejercicios').hide()">Descripcion</button>
+        <h2><em>Filtro de página</em></h2>
+        <button onclick="$('#descripcion').show(); $('#etapasMineriaDatos').hide(); $('#informacionInteres').hide()">Descripcion</button>
         <br />
-        <button onclick="$('#informacionInteres').show(); $('#descripcion').hide(); $('#etapasMineriaDatos').hide(); $('#ejercicios').hide()">InformacionInteres</button>
+        <button onclick="$('#informacionInteres').show(); $('#descripcion').hide(); $('#etapasMineriaDatos').hide()">InformacionInteres</button>
         <br />
-        <button onclick="$('#etapasMineriaDatos').show(); $('descripcion').hide(); $('#informacionInteres').hide(); $('#ejercicios').hide()">EtapasMineriaDatos</button>
-        <br />
-        <button onclick="$('#ejercicios').show(); $('#etapasMineriaDatos').hide(); $('descripcion').hide(); $('#informacionInteres').hide()">EjerciciosPropuestos</button>
-        <br />
+        <button onclick="$('#etapasMineriaDatos').show(); $('descripcion').hide(); $('#informacionInteres').hide()">EtapasMineriaDatos</button>
     </div>
 {% endblock %}
 
@@ -19,8 +17,8 @@
 
 <!--Descripcion de mineria de datos-->
 <div id="descripcion" style="display:none">
-    <h1 style="font-family: 'Lobster' ">¿Qué es la minería de datos?</h1>
-    <p style="color:yellow">
+    <h1>¿Qué es la minería de datos?</h1>
+    <p>
         Se define la minería de datos como el conjunto de técnicas y tecnologías que permiten explorar grandes bases de datos
         de manera automática o semiautomática.
         <br />
@@ -32,7 +30,7 @@
 <!--Informacion de interes-->
 
 <div id="informacionInteres" style="display:none">
-    <h1 style="font-family: 'Lobster' ">Información de interés</h1>
+    <h1>Información de interés</h1>
     <!--Botones para mostrar la informacion de interes-->
     <div style="text-align:center; padding:50px">
         <button onclick="$('#archivosCSV').show(); $('#archivosARFF').hide(); $('#interpolacion').hide(); $('#datosNulos').hide(); $('#seleccionDatosInteres').hide(); $('#outliers').hide(); $('#arbolDecision').hide(); $('#knn').hide();$('#svc').hide()">ArchivosCSV</button>
@@ -48,96 +46,94 @@
 
     <!--Informacion Adicional de Archivos CSV-->
     <div id="archivosCSV" style="display:none">
-        <h1 style="font-family: 'Lobster' ">Archivos CSV</h1>
-            <p style="color:yellow">
+        <h1>Archivos CSV</h1>
+            <p>
                 Los archivos CSV son un tipo de documento en formato abierto sencillo para representar datos en forma de tabla, en las que las columnas se separan por un delimitador y las filas por saltos de líneas.
                 <br />
-                <a style="margin-top:20px" href="https://www.adslzone.net/reportajes/software/csv-que-es/" class="btn btn-primary btn-large" target="_blank" >Aprender más&raquo;</a>
+                <a href="https://www.adslzone.net/reportajes/software/csv-que-es/" class="btn btn-primary btn-large" target="_blank" >Aprender más&raquo;</a>
             </p>
     </div>
     
     <!--Informacion Adicional de Archivos ARFF-->
     <div id="archivosARFF" style="display:none">
-        <h1 style="font-family: 'Lobster' ">Archivos ARFF</h1>
-        <p style="color:yellow">
+        <h1>Archivos ARFF</h1>
+        <p>
             Un archivo arff es un archivo de texto ASCII que describe una lista de instancias con atributos comunes.
             <br />
-            <a style="margin-top:20px" href="https://filext.com/es/extension-de-archivo/ARFF" class="btn btn-primary btn-large" target="_blank" >Aprender más&raquo;</a>
+            <a href="https://filext.com/es/extension-de-archivo/ARFF" class="btn btn-primary btn-large" target="_blank" >Aprender más&raquo;</a>
         </p>
     </div>
     
     <!-- Informacion Adicional de Interpolacion-->
     <div id="interpolacion" style="display:none">
-        <h1 style="font-family: 'Lobster' ">INTERPOLACION</h1>
-        <p style="color:yellow">
-            <a style="margin-top:20px" href="https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.interpolate.html" class="btn btn-primary btn-large" target="_blank" >Aprender más&raquo;</a>
+        <h1>INTERPOLACION</h1>
+        <p>
+            <a href="https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.interpolate.html" class="btn btn-primary btn-large" target="_blank" >Aprender más&raquo;</a>
         </p>
     </div>
     
     <!-- Informacion Adicional de Datos nulos-->
     <div id="datosNulos" style="display:none">
-        <h1 style="font-family: 'Lobster' ">DATOS NULOS</h1>
-        <p style="color:yellow">
+        <h1>DATOS NULOS</h1>
+        <p>
             Se conoce como datos nulos a aquellos datos sin información alguna en alguno de los elementos de la variable. 
             <br />Estos pueden deberse a diversas causas como falta de información o no haber podido estimar la variable,  un error de entrada, o bien a un fenómeno externo que impidió la recolección de datos.
             <br />
-            <a style="margin-top:20px" href="https://www.scribbr.com/statistics/missing-data/" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
+            <a href="https://www.scribbr.com/statistics/missing-data/" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
         </p>
     </div>
 
     <!-- Informacion Adicional de Seleccion de Datos de Interes-->
     <div id="seleccionDatosInteres" style="display:none">
-        <h1 style="font-family: 'Lobster' ">SELECCION DE DATOS DE INTERES</h1>
-        <p style="color:yellow">
+        <h1>SELECCION DE DATOS DE INTERES</h1>
+        <p>
             Al analizar los datos disponibles, se pueden identificar aquellos atributos que pueden ser relevantes y aquellos atributos que pueden descartarse.
         </p>
     </div>
     
     <!-- Informacion Adicional de Outliers-->
     <div id="outliers" style="display:none">
-        <h1 style="font-family: 'Lobster' ">OUTLIERS</h1>
-        <p style="color:yellow">
+        <h1>OUTLIERS</h1>
+        <p>
             Por outliers nos referimos a cualquier dato que difiere signicativamente del promedio o rango observado del resto de nuestros datos.
             <br />
-            <a style="margin-top:20px" href="https://www.malicksarr.com/how-to-detect-and-handle-outliers-in-data-mining/?utm_content=cmp-true" target="_blank" class="btn btn-primary btn-large">Aprender más&raquo;</a>
+            <a href="https://www.malicksarr.com/how-to-detect-and-handle-outliers-in-data-mining/?utm_content=cmp-true" target="_blank" class="btn btn-primary btn-large">Aprender más&raquo;</a>
         </p>
     </div>
     
     <!--Informacion Adicional de Arboles de Decision-->
     <div id="arbolDecision" style="display:none">
-        <h1 style="font-family: 'Lobster' ">ARBOL DE DECISION</h1>
-        <p style="color:yellow">
+        <h1>ARBOL DE DECISION</h1>
+        <p>
             Un árbol de decisión es un algoritmo de aprendizaje supervisado no paramétrico, que se utiliza tanto para tareas de clasificación como de regresión.
             <br />
-            <a style="margin-top:20px" href="https://www.unir.net/ingenieria/revista/arboles-de-decision/" target="_blank" class="btn btn-primary btn-large">Aprender más&raquo;</a>
+            <a href="https://www.unir.net/ingenieria/revista/arboles-de-decision/" target="_blank" class="btn btn-primary btn-large">Aprender más&raquo;</a>
         </p>
-        
-        <div>
-            <h2 style="font-family: 'Lobster'"><em>Random Forest</em></h2>
-            <p style="color:yellow">
-                <br />
+
+        <h2><em>Random Forest</em></h2>
+        <p>
+            <br />
                 <a class="btn btn-primary btn-large" href="https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html" target="_blank">Aprender más&raquo;</a>
-            </p>
-        </div>
+        </p>
     </div>
 
     <!--Informacion Adicional de KNN-->
     <div id="knn" style="display:none">
-        <h1 style="font-family: 'Lobster' ">KNN</h1>
-        <p style="color:yellow">
+        <h1>KNN</h1>
+        <p>
             Los algoritmos KNN son clasificadores de aprendizaje supervisado no paramétrico, que utilizan la proximidad para realizar clasificaciones o predicciones sobre la agrupación de un punto de datos individual.
             <br />
-            <a style="margin-top:20px" href="https://www.themachinelearners.com/algoritmo-knn/" target="_blank" class="btn btn-primary btn-large">Aprender más&raquo;</a>
+            <a href="https://www.themachinelearners.com/algoritmo-knn/" target="_blank" class="btn btn-primary btn-large">Aprender más&raquo;</a>
         </p>
     </div>
     
     <!--Informacion Adicional de SVC-->
     <div id="svc" style="display:none">
-        <h1 style="font-family: 'Lobster' ">SVC</h1>
-        <p style="color:yellow">
+        <h1>SVC</h1>
+        <p>
             Un algoritmo SVC es un algoritmo de aprendizaje automático supervisado que generalmente se usa para tareas de clasificación.
             <br />
-            <a style="margin-top:20px" href="https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html" target="_blank" class="btn btn-primary btn-large">Aprender más&raquo;</a>
+            <a href="https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html" target="_blank" class="btn btn-primary btn-large">Aprender más&raquo;</a>
         </p>
     </div>
 </div>
@@ -145,9 +141,9 @@
 <!--Etapas del proceso de mineria de datos-->
 
 <div id="etapasMineriaDatos" style="display:none">
-    <h1 style="font-family: 'Lobster' ">Etapas de la mineria de datos</h1>
+    <h1>Etapas de la mineria de datos</h1>
     <!--Botones para mostrar distintas etapas de la mineria de datos-->
-    <div style="text-align:center; padding:50px">
+    <div>
         <button onclick="$('#ObtencionDatos').show(); $('#PreprocesamientoDatos').hide(); $('#Algoritmos').hide(); $('#EvaluacionResultados').hide()">ObtencionDatos</button>
         <button onclick="$('#PreprocesamientoDatos').show(); $('#ObtencionDatos').hide(); $('#Algoritmos').hide(); $('#EvaluacionResultados').hide()">PreprocesamientoDatos</button>
         <button onclick="$('#Algoritmos').show(); $('#ObtencionDatos').hide(); $('#PreprocesamientoDatos').hide(); $('#EvaluacionResultados').hide()">Algoritmos</button>
@@ -155,71 +151,55 @@
     </div>
     <!--Etapa de mineria de datos: Obtencion de Datos-->
     <div id="ObtencionDatos" style="display:none">
-        <h1 style="font-family: 'Lobster' ">Obtencion de Datos</h1>
-        <p style="color:yellow">
+        <h1>Obtencion de Datos</h1>
+        <p>
             Esta fase de la minería de datos se refiere a obtener los datos o conjuntos de datos que se desean predecir, calcular o inferir. Dichos datos sirven para determinar los cálculos o los procesos.
         </p>
-        <div>
-            <h2 style="font-family: 'Lobster'"><em>Videos Tutorial</em></h2>
+        <h2><em>Videos Tutorial</em></h2>
             <p>
-                <a href="" style="color:yellow;margin-top:20px">PyScript</a>
-                <a href="" style="color:yellow; margin-left:30px">Bash</a>
+                <a href="" target="_blank" class="btn btn-primary btn-large">PyScript &raquo;</a>
+                <a href="" target="_blank" class="btn btn-primary btn-large">Bash &raquo;</a>
             </p>
-        </div>
     </div>
     <!--Etapa de mineria de datos: Preprocesamiento de Datos -->
     <div id="PreprocesamientoDatos" style="display:none">
-        <h1 style="font-family: 'Lobster' ">Preprocesamiento de Datos</h1>
-        <p style="color:yellow">
+        <h1>Preprocesamiento de Datos</h1>
+        <p>
             El Preprocesamiento de Datos consiste en un conjunto de técnicas utilizadas para preparar los datos para su uso en un sistema IA.
             <br />
-            <a style="margin-top:20px" href="https://blog.powerdata.es/el-valor-de-la-gestion-de-datos/preprocesar-y-normalizar-datos-4-pasos-para-limpiar-y-mejorar-datos"
-           class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
+            <a href="https://blog.powerdata.es/el-valor-de-la-gestion-de-datos/preprocesar-y-normalizar-datos-4-pasos-para-limpiar-y-mejorar-datos" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
         </p>
-        <div>
-            <h2 style="font-family: 'Lobster'"><em>Videos Tutorial</em></h2>
-            <p>
-                <a href="" style="color:yellow;margin-top:20px">PyScript</a>
-                <a href="" style="color:yellow; margin-left:30px">Bash</a>
-            </p>
-        </div>
+        <h2><em>Videos Tutorial</em></h2>
+        <p>
+            <a href="" target="_blank" class="btn btn-primary btn-large">PyScript &raquo;</a>
+            <a href="" target="_blank" class="btn btn-primary btn-large">Bash &raquo;</a>    
+        </p>
     </div>
     <!--Etapa de mineria de datos: Algoritmos de Mineria de Datos -->
     <div id="Algoritmos" style="display:none">
-        <h1 style="font-family: 'Lobster' ">Algoritmos de Mineria de Datos</h1>
-        <p style="color:yellow">
+        <h1>Algoritmos de Mineria de Datos</h1>
+        <p>
             Un algoritmo en minería de datos es un conjunto de heurísticas y cálculos que permiten crear un modelo a partir de datos.
             <br />
-            <a style="margin-top:20px" href="https://learn.microsoft.com/es-es/analysis-services/data-mining/data-mining-algorithms-analysis-services-data-mining?view=asallproducts-allversions" class="btn btn-primary btn-large">Aprender más&raquo;</a>
+            <a href="https://learn.microsoft.com/es-es/analysis-services/data-mining/data-mining-algorithms-analysis-services-data-mining?view=asallproducts-allversions" class="btn btn-primary btn-large">Aprender más&raquo;</a>
         </p>
         <!--Videos tutorial-->
-        <div>
-            <h2 style="font-family: 'Lobster'"><em>Videos Tutorial</em></h2>
-            <p>
-                <a href="" style="color:yellow;margin-top:20px">PyScript</a> 
-                <a href="" style="color:yellow; margin-left:30px">Bash</a>
-            </p>
-        </div>
+        <h2><em>Videos Tutorial</em></h2>
+        <p>
+            <a href="" target="_blank" class="btn btn-primary btn-large">PyScript &raquo;</a>
+            <a href="" target="_blank" class="btn btn-primary btn-large">Bash &raquo;</a>
+        </p>
     </div>
     <!--Etapa de mineria de datos: Evaluacion de Resultados -->
     <div id="EvaluacionResultados" style="display:none">
-        <h1 style="font-family: 'Lobster' ">Evaluacion de Resultados</h1>
-        <p style="color:yellow">
+        <h1>Evaluacion de Resultados</h1>
+        <p>
             La evaluación de resultados se efectúa una vez que se ha obtenido el modelo, comprobando que las conclusiones obtenidas son válidas y satisfactorias.
         </p>
         <!--Videos tutoriales-->
-        <div>
-            <h2 style="font-family: 'Lobster'">Videos tutorial</h2>
-            <a href="" style="color:yellow; margin-top:20px">EvaluacionResultados</a>
-        </div>
+        <h2>Videos tutorial</h2>
+        <a href="" target="_blank" class="btn btn-primary btn-large">Evaluacion de Resultados &raquo;</a>
     </div>
-</div>
-
-<!--Ejercicios propuestos-->
-
-<div id="ejercicios" style="display:none">
-    <h1 style="font-family: 'Lobster' ">Ejercicios Propuestos</h1>
-    <a href="" style="color:yellow">Script</a>
 </div>
 
 
